--- a/src/apps/Index/PageDemo/template.html
+++ b/src/apps/Index/PageDemo/template.html
@@ -1,10 +1,12 @@
 <div :id="style.PageDemo">
-    <div class="{{ style['area-left'] }}" v-if="lineChartOption">
+    <div class= "{{ style['area']}}" id="{{ style['area-matrix']}}"></div>
+    <div class= "{{ style['area']}}" id="{{ style['area-calendar']}}"></div>
+    <div class= "{{ style['area']}}" id="{{ style['area-map']}}"></div>
+    <div class= "{{ style['area']}}" id="{{ style['area-hist-category']}}"></div>
+    <div class= "{{ style['area']}}" id="{{ style['area-hist-resolution']}}"></div>
+    <div class= "{{ style['area']}}" id="{{ style['area-wordle']}}">
         <line-chart :chart-option="lineChartOption"
                     @chart-click="onChartClick">
         </line-chart>
-    </div>
-    <div class="{{ style['area-right'] }}">
-
     </div>
 </div>
