word cloud rendered

--- a/src/apps/Index/PageDemo/template.html
+++ b/src/apps/Index/PageDemo/template.html
@@ -10,6 +10,6 @@
                     @chart-click="onChartClick">
         </line-chart>
         -->
-        <wordle :chart-option="lineChartOption"></wordle>
+        <wordle :chart-option="wordleOption"></wordle>
     </div>
 </div>
