--- a/src/apps/Index/PageSlide/template.html
+++ b/src/apps/Index/PageSlide/template.html
@@ -1,9 +1,4 @@
-<div :id="style.PageSlide">
-    <div class= "{{ style['area']}}" id="{{ style['area-slide']}}">里面放冯璐的matrix以及上侧和右侧的histogram</div>
-    </div>
-
-</div>
-<div class="reveal">
+<div :id="style.PageSlide" class="reveal">
     <div class="slides">
         <section>
             <h2>Barebones Presentation</h2>
