--- a/src/apps/Index/PageSlide/template.html
+++ b/src/apps/Index/PageSlide/template.html
@@ -8,6 +8,7 @@
         <section id="sect2">
             <h2>No Theme</h2>
             <p>There's no theme included, so it will fall back on browser defaults.</p>
+            <!-- <svg class = 'chart'></svg> -->
         </section>
     </div>
 </div>
