--- a/src/apps/Index/PageDemo/template.html
+++ b/src/apps/Index/PageDemo/template.html
@@ -2,7 +2,9 @@
     <div class= "{{ style['area']}}" id="{{ style['area-matrix']}}">里面放冯璐的matrix以及上侧和右侧的histogram</div>
     <div class= "{{ style['area']}}" id="{{ style['area-calendar']}}">里面放蒋瑞柯的3个月的calendar</div>
     <div class= "{{ style['area']}}" id="{{ style['area-map']}}">里面放刘强强的map</div>
-    <div class= "{{ style['area']}}" id="{{ style['area-hist-category']}}">里面放马楠的犯罪类别的直方图</div>
+    <div class= "{{ style['area']}}" id="{{ style['area-hist-category']}}">
+        <bar-chart :data-set="dataSet"></bar-chart>
+    </div>
     <div class= "{{ style['area']}}" id="{{ style['area-hist-resolution']}}">里面放马楠的解决方式的直方图</div>
     <div class= "{{ style['area']}}" id="{{ style['area-wordle']}}">里面放张宇的wordcloud
         <line-chart :chart-option="lineChartOption"
