--- a/src/apps/Index/PageDemo/template.html
+++ b/src/apps/Index/PageDemo/template.html
@@ -5,11 +5,17 @@
     <div class= "{{ style['area']}}" id="{{ style['area-hist-category']}}">里面放马楠的犯罪类别的直方图</div>
     <div class= "{{ style['area']}}" id="{{ style['area-hist-resolution']}}">里面放马楠的解决方式的直方图</div>
     <div class= "{{ style['area']}}" id="{{ style['area-wordle']}}">
-        <!--
+        <container>
+            <wordle slot="content" :chart-option="wordleOption"></wordle>
+        </container>
+    </div>
+    <!--
+    <div class= "{{ style['area']}}" id="{{ style['area-wordle']}}">
         <line-chart :chart-option="lineChartOption"
                     @chart-click="onChartClick">
         </line-chart>
-        -->
         <wordle :chart-option="wordleOption"></wordle>
+        <container></container>
     </div>
+    -->
 </div>
