--- a/src/apps/Index/PageDemo/template.html
+++ b/src/apps/Index/PageDemo/template.html
@@ -1,6 +1,10 @@
 <div :id="style.PageDemo">
-    <div class= "{{ style['area']}}" id="{{ style['area-matrix']}}">
-        <matrix :chart-option="matrixOption"></matrix>
+    <div class= "{{ style['area'] }}" id="{{ style['area-big-matrix']}}">
+        <div class= "{{ style['area'] }}" id="{{ style['area-histogram1']}}"></div>
+        <div class= "{{ style['area'] }}" id="{{ style['area-histogram2']}}"></div>
+        <div class= "{{ style['area'] }}" id="{{ style['area-matrix']}}">
+            <matrix :chart-option="matrixOption"></matrix>
+        </div>
     </div>
     <div class= "{{ style['area']}}" id="{{ style['area-calendar']}}">里面放蒋瑞柯的3个月的calendar</div>
     <div class= "{{ style['area']}}" id="{{ style['area-map']}}">里面放刘强强的map</div>
