--- a/src/apps/Index/PageSlide/template.html
+++ b/src/apps/Index/PageSlide/template.html
@@ -1,6 +1,6 @@
 <div :id="style.PageSlide" class="reveal">
     <div class="slides">
-        <section>
+        <section id="sect1">
             <h2>Barebones Presentation</h2>
             <p>This example contains the bare minimum includes and markup required to run a reveal.js presentation.</p>
         </section>
@@ -10,5 +10,6 @@
             <p>There's no theme included, so it will fall back on browser defaults.</p>
             <!-- <svg class = 'chart'></svg> -->
         </section>
+
     </div>
 </div>
