--- a/src/apps/Index/PageDemo/template.html
+++ b/src/apps/Index/PageDemo/template.html
@@ -6,7 +6,10 @@
             <matrix :chart-option="matrixOption"></matrix>
         </div>
     </div>
-    <div class= "{{ style['area']}}" id="{{ style['area-calendar']}}">里面放蒋瑞柯的3个月的calendar</div>
+    <div class= "{{ style['area']}}" id="{{ style['area-calendar']}}">
+        <!--里面放蒋瑞柯的3个月的calendar-->
+        <calendar :chart-option="calendarOption"></calendar>
+    </div>
     <div class= "{{ style['area']}}" id="{{ style['area-map']}}">里面放刘强强的map</div>
     <div class= "{{ style['area']}}" id="{{ style['area-hist-category']}}">
         <bar-chart :chart-option="barChartOptionCat"></bar-chart>
@@ -15,11 +18,8 @@
         <bar-chart :chart-option="barChartOptionRes"></bar-chart>
     </div>
     <div class= "{{ style['area']}}" id="{{ style['area-wordle']}}">
-        <!--
-        <line-chart :chart-option="lineChartOption"
-                    @chart-click="onChartClick">
-        </line-chart>
-        -->
-        <wordle :chart-option="wordleOption"></wordle>
+        <container>
+            <wordle slot="content" :chart-option="wordleOption"></wordle>
+        </container>
     </div>
 </div>
