--- a/src/apps/Index/Main/template.html
+++ b/src/apps/Index/Main/template.html
@@ -1,3 +1,3 @@
 <main id="{{ style.Main }}">
-    <component :is="activeMain" keep-alive="true"></component>
+    <component :is="activeMain" keep-alive="true" :token.sync="token"></component>
 </main>
