--- a/src/apps/Index/template.html
+++ b/src/apps/Index/template.html
@@ -1,4 +1,4 @@
 <div id="{{ style.AppIndex }}">
     <app-header :navs="navsInHeader" :active="activeRouterName"></app-header>
-    <app-main></app-main>
+    <app-main :token.sync="token"></app-main>
 </div>
