--- a/src/apps/Index/PageSlide/template.html
+++ b/src/apps/Index/PageSlide/template.html
@@ -9,6 +9,7 @@
             <h2>No Theme</h2>
             <p>There's no theme included, so it will fall back on browser defaults.</p>
             <!-- <svg class = 'chart'></svg> -->
+            <calendar :chart-option="calendarOption"></calendar>
         </section>
 
     </div>
