slide communication finished

--- a/src/apps/Index/PageSlide/template.html
+++ b/src/apps/Index/PageSlide/template.html
@@ -3,13 +3,13 @@
         <section id="sect1">
             <h2>Barebones Presentation</h2>
             <p>This example contains the bare minimum includes and markup required to run a reveal.js presentation.</p>
+            {{{markedContainer}}}
         </section>
 
         <section id="sect2">
             <h2>No Theme</h2>
             <p>There's no theme included, so it will fall back on browser defaults.</p>
             <!-- <svg class = 'chart'></svg> -->
-            <calendar :chart-option="calendarOption"></calendar>
         </section>
 
     </div>
