--- a/src/apps/Index/PageSlide/template.html
+++ b/src/apps/Index/PageSlide/template.html
@@ -1,15 +1,21 @@
 <div :id="style.PageSlide" class="reveal">
     <div class="slides">
-        <section id="sect1">
+        <!--
+        <section v-for="item in markedContainerList">
             <h2>Barebones Presentation</h2>
-            <p>This example contains the bare minimum includes and markup required to run a reveal.js presentation.</p>
-            {{{markedContainer}}}
+            {{{item.content}}}
+        </section>
+        -->
+
+        <section class= "{{ style['wrapper-slide']}}">
+            <h2>Discoveries</h2>
+            <section class="{{ style['content-slide']}}" v-for="item in markedContainerList">
+                {{{item.content}}}
+            </section>
         </section>
 
-        <section id="sect2">
-            <h2>No Theme</h2>
-            <p>There's no theme included, so it will fall back on browser defaults.</p>
-            <!-- <svg class = 'chart'></svg> -->
+        <section>
+            <h2>The End</h2>
         </section>
 
     </div>
