--- a/src/apps/Index/PageDemo/template.html
+++ b/src/apps/Index/PageDemo/template.html
@@ -1,10 +1,14 @@
 <div :id="style.PageDemo">
     <div class= "{{ style['area'] }}" id="{{ style['area-big-matrix']}}">
         <div class= "{{ style['area'] }}" id="{{ style['area-histogram1']}}">
-            <bar-chart :chart-option="timeOption"></bar-chart>
+            <container>
+                <bar-chart slot="content" :chart-option="timeOption"></bar-chart>
+            </container>
         </div>
         <div class= "{{ style['area'] }}" id="{{ style['area-histogram2']}}">
-            <bar-chart-hor :chart-option="dayOption"></bar-chart-hor>
+            <container>
+                <bar-chart-hor slot="content" :chart-option="dayOption"></bar-chart-hor>
+            </container>
         </div>
         <div class= "{{ style['area'] }}" id="{{ style['area-matrix']}}">
             <container>
